--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
   min-height: 100vh;
   font-size: 18px;
   background-color: var(--Dark-cyan);
+  font-family: Kumbh Sans, sans-serif;
+  color: var( --Very-dark-desaturated-blue);
 }
 
 .card {
@@ -69,6 +71,24 @@ body {
   top: 35%;
 }
 
+.name::after{
+    content: ' 26';
+    font-size: 1.2rem;
+    font-family: 'courier new';
+    color: gray;
+    color: var(--Dark-grayish-blue);
+    
+}
+
+.name{
+    font-size: 1.2rem;
+}
+.place{
+    padding: 7px;
+    font-size: .8rem;
+    color: var(--Dark-gray);
+}
+
 .stats-container {
   height: 23.5%;
   border-top: 0.4px solid rgb(223, 223, 223);
@@ -79,9 +99,20 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   place-items: center;
   height: 100%;
+  margin: auto 15px;
 }
 
 .stats-container > ul > li {
   list-style-type: none;
   text-align: center;
+}
+
+.stat-number{
+    font-size: 1.1rem;
+}
+
+.stat-name{
+    padding: 4px;
+    font-size: .7rem;
+    color: var(--Dark-gray);
 }
