--- a/style.css
+++ b/style.css
@@ -17,11 +17,39 @@ body {
   margin: 0;
   display: grid;
   place-items: center;
-  min-height: 100vh;
+  min-height: fit-content;
+  height: 100vh;
   font-size: 18px;
   background-color: var(--Dark-cyan);
   font-family: Kumbh Sans, sans-serif;
   color: var( --Very-dark-desaturated-blue);
+  overflow: hidden;
+}
+
+body::before,
+body::after{
+    content: "";
+    position: absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: -1;
+}
+
+body::before{
+    background-image:url(./images/bg-pattern-top.svg);
+    top: -57%;
+    left: -7%;
+    height: 110%;
+    width: 110%;
+}
+
+body::after{ 
+    background-image: url(./images/bg-pattern-bottom.svg);
+    background-size: contain;
+    bottom: -95%;
+    right: -175%;
+    height: 140%;
+    width: 230%;
 }
 
 .card {
@@ -31,6 +59,9 @@ body {
   border-radius: 15px;
   overflow: hidden;
   overflow: auto;
+
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.06),
+              0 50px 60px rgba(0, 0, 0, 0.15);
 }
 
 .details-container {
@@ -77,7 +108,6 @@ body {
     font-family: 'courier new';
     color: gray;
     color: var(--Dark-grayish-blue);
-    
 }
 
 .name{
