--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
   padding: 0;
 }
 
+::selection{
+    background-color: hsl(185, 49%, 50%);
+    color: white;
+}
+
 body {
   margin: 0;
   display: grid;
@@ -36,18 +41,18 @@ body::after{
 }
 
 body::before{
-    background-image:url(./images/bg-pattern-top.svg);
-    top: -57%;
-    left: -7%;
-    height: 110%;
-    width: 110%;
+    background-image: url(./images/bg-pattern-top.svg);
+    top: -70%;
+    left: -20%;
+    height: 135%;
+    width: 120%;
 }
 
 body::after{ 
     background-image: url(./images/bg-pattern-bottom.svg);
     background-size: contain;
-    bottom: -95%;
-    right: -175%;
+    bottom: -91%;
+    right: -178%;
     height: 140%;
     width: 230%;
 }
@@ -66,6 +71,7 @@ body::after{
 
 .details-container {
   height: 76.5%;
+  background-image: linear-gradient(90deg ,darkcyan, hsl(185, 76%, 44%) );
   background-image: url(./images/bg-pattern-card.svg);
   background-size: 100% 49%;
   background-repeat: no-repeat;
@@ -76,13 +82,14 @@ body::after{
   position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -52%);
 
   border-radius: 50%;
 
   background-color: white;
-  height: 95px;
-  width: 95px;
+  height: 94px;
+  width: 94px;
+  overflow: hidden;
 
   display: grid;
   place-items: center;
@@ -92,36 +99,48 @@ body::after{
   border-radius: 50%;
   height: 86px;
   width: 86px;
+  background-image: linear-gradient(90deg ,darkcyan, hsl(185, 76%, 44%) );
+  font-size: .6rem;
   aspect-ratio: 1/1;
+  cursor: pointer;
 }
 
 .details {
   position: relative;
   width: 100%;
   text-align: center;
-  top: 35%;
+  top: 38%;
+}
+
+.name{
+    font-size: 1rem;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.name:hover{
+    color: hsl(185deg 72% 35%);
 }
 
 .name::after{
     content: ' 26';
-    font-size: 1.2rem;
-    font-family: 'courier new';
+    padding-top: 5px;
+    padding-left: 4px;
+    font-size: .95rem;
+    font-weight: 400;
     color: gray;
     color: var(--Dark-grayish-blue);
 }
 
-.name{
-    font-size: 1.2rem;
-}
 .place{
-    padding: 7px;
-    font-size: .8rem;
+    padding: 10px;
+    font-size: .78rem;
     color: var(--Dark-gray);
 }
 
 .stats-container {
   height: 23.5%;
-  border-top: 0.4px solid rgb(223, 223, 223);
+  border-top: 0.4px solid rgb(228, 228, 228);
 }
 
 .stats-container > ul {
@@ -129,20 +148,31 @@ body::after{
   grid-template-columns: 1fr 1fr 1fr;
   place-items: center;
   height: 100%;
-  margin: auto 15px;
+  margin: auto 22px;
 }
 
 .stats-container > ul > li {
-  list-style-type: none;
-  text-align: center;
+    list-style-type: none;
+    text-align: center;
+    cursor: pointer;
+    transition: transform .1s ease-in;
+    padding: 20px;
+}
+
+.stats-container > ul > li:hover{
+    filter: blur(0);
+    transform: scale(1.04);
+    color: hsl(185deg 72% 35%);
 }
 
 .stat-number{
-    font-size: 1.1rem;
+    font-size: 1.05rem;
+    font-weight: 700;
 }
 
 .stat-name{
-    padding: 4px;
-    font-size: .7rem;
+    padding-top: 4px;
+    font-size: .56rem;
+    letter-spacing: 1.2px;
     color: var(--Dark-gray);
 }
