--- a/style.css
+++ b/style.css
@@ -67,6 +67,18 @@ body::after{
 
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.06),
               0 50px 60px rgba(0, 0, 0, 0.15);
+  opacity: 0;
+  animation: card 500ms ease-in forwards;
+}
+@keyframes card{
+  0%{
+    opacity: 0;
+    transform: scale(0) rotate(0deg);
+  }
+  100%{
+    opacity: 1;
+    transform: scale(1) rotate(360deg);
+  }
 }
 
 .details-container {
@@ -171,8 +183,9 @@ body::after{
 }
 
 .stat-name{
-    padding-top: 4px;
+    padding-top: 5px;
     font-size: .56rem;
     letter-spacing: 1.2px;
     color: var(--Dark-gray);
 }
+
