--- a/style.css
+++ b/style.css
@@ -46,15 +46,39 @@ body::before{
     left: -20%;
     height: 135%;
     width: 120%;
+
+    transform: scale(.5);
+    animation: bg1 700ms 300ms forwards;
+}
+
+@keyframes bg1 {
+  from{
+    transform: scale(.5);
+  }
+  to{
+    transform: scale(1);
+  }
 }
 
 body::after{ 
-    background-image: url(./images/bg-pattern-bottom.svg);
-    background-size: contain;
-    bottom: -91%;
-    right: -178%;
-    height: 140%;
-    width: 230%;
+  background-image: url(./images/bg-pattern-bottom.svg);
+  background-size: contain;
+  bottom: -91%;
+  right: -178%;
+  height: 140%;
+  width: 230%;
+  
+  transform: scale(.8);
+  animation: bg2 700ms 300ms forwards;
+}
+
+@keyframes bg2 {
+  from{
+    transform: scale(.8);
+  }
+  to{
+    transform: scale(1);
+  }
 }
 
 .card {
@@ -67,9 +91,12 @@ body::after{
 
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.06),
               0 50px 60px rgba(0, 0, 0, 0.15);
+  transition: all .3s;
   opacity: 0;
-  animation: card 500ms ease-in-out 200ms forwards;
+  transform: scale(0) skew(00deg);
+  animation: card 500ms ease-in-out 300ms forwards;
 }
+
 @keyframes card{
   0%{
     opacity: 0;
@@ -79,6 +106,11 @@ body::after{
     opacity: 1;
     transform: scale(1) skew(360deg);
   }
+}
+
+.card:hover{
+  box-shadow:  0px 5px 30px rgba(0, 0, 0, 0.06),
+              0 5px 20px rgba(0, 0, 0, 0.15);
 }
 
 .details-container {
@@ -108,13 +140,27 @@ body::after{
 }
 
 .avatar {
+  position: relative;
   border-radius: 50%;
   height: 86px;
   width: 86px;
   background-image: linear-gradient(90deg ,darkcyan, hsl(185, 76%, 44%) );
   font-size: .6rem;
-  aspect-ratio: 1/1;
   cursor: pointer;
+  aspect-ratio: 1/1;
+
+  opacity: 0;
+  animation: avatar 300ms 900ms forwards;
+}
+
+@keyframes avatar {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+  
 }
 
 .details {
@@ -188,4 +234,3 @@ body::after{
     letter-spacing: 1.2px;
     color: var(--Dark-gray);
 }
-
