--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 :root {
-  --Dark-cyan: hsl(185, 75%, 39%);
-  --Very-dark-desaturated-blue: hsl(229, 23%, 23%);
-  --Dark-grayish-blue: hsl(227, 10%, 46%);
   --Dark-gray: hsl(0, 0%, 59%);
 }
 
@@ -20,14 +17,16 @@
 
 body {
   margin: 0;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   min-height: fit-content;
   height: 100vh;
   font-size: 18px;
-  background-color: var(--Dark-cyan);
+  background-color: hsl(185, 75%, 39%);
   font-family: Kumbh Sans, sans-serif;
-  color: var( --Very-dark-desaturated-blue);
+  color: hsl(229, 23%, 23%);
   overflow: hidden;
 }
 
@@ -87,13 +86,12 @@ body::after{
   background-color: white;
   border-radius: 15px;
   overflow: hidden;
-  overflow: auto;
 
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.06),
               0 50px 60px rgba(0, 0, 0, 0.15);
   transition: all .3s;
   opacity: 0;
-  transform: scale(0) skew(00deg);
+  transform: scale(0) skew(300deg);
   animation: card 500ms ease-in-out 300ms forwards;
 }
 
@@ -135,8 +133,9 @@ body::after{
   width: 94px;
   overflow: hidden;
 
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .avatar {
@@ -177,7 +176,7 @@ body::after{
 }
 
 .name:hover{
-    color: hsl(185deg 72% 35%);
+    color: hsl(185, 72%, 35%);
 }
 
 .name::after{
@@ -187,13 +186,13 @@ body::after{
     font-size: .95rem;
     font-weight: 400;
     color: gray;
-    color: var(--Dark-grayish-blue);
+    color: hsl(227, 10%, 46%);
 }
 
 .place{
     padding: 10px;
     font-size: .78rem;
-    color: var(--Dark-gray);
+    color: hsl(0, 0%, 59%);
 }
 
 .stats-container {
@@ -202,6 +201,10 @@ body::after{
 }
 
 .stats-container > ul {
+  display: flex; /* fallback for IE*/
+  align-items: center;
+  justify-content: center;
+
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   place-items: center;
@@ -220,7 +223,7 @@ body::after{
 .stats-container > ul > li:hover{
     filter: blur(0);
     transform: scale(1.04);
-    color: hsl(185deg 72% 35%);
+    color: hsl(185, 72%, 35%);
 }
 
 .stat-number{
@@ -232,5 +235,5 @@ body::after{
     padding-top: 5px;
     font-size: .56rem;
     letter-spacing: 1.2px;
-    color: var(--Dark-gray);
+    color: hsl(0, 0%, 59%);
 }
