--- a/style.css
+++ b/style.css
@@ -183,10 +183,10 @@ main:after {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0.91);
   border-radius: 50%;
-  transform: scale(0.91);
   background-image: linear-gradient(90deg, rgb(0, 139, 139), rgb(27, 183, 197));
   z-index: -1;
 }
